--- a/src/HairBand.Core/project.json
+++ b/src/HairBand.Core/project.json
@@ -7,7 +7,7 @@
     "licenseUrl": "",
 
     "dependencies": {
-        "YamlDotNet.Dynamic": "3.2.3"
+        "CommonMark.NET": "0.9.0"
     },
 
     "frameworks": {
