--- a/src/HairBand.Core/project.json
+++ b/src/HairBand.Core/project.json
@@ -7,7 +7,8 @@
     "licenseUrl": "",
 
     "dependencies": {
-        "CommonMark.NET": "0.9.0"
+        "CommonMark.NET": "0.9.0",
+        "Microsoft.AspNet.Hosting.Interfaces": "1.0.0-beta4"
     },
 
     "frameworks": {
