--- a/src/HairBand/project.lock.json
+++ b/src/HairBand/project.lock.json
@@ -25,7 +25,8 @@
       "Microsoft.Framework.Logging >= 1.0.0-beta4",
       "Microsoft.Framework.Logging.Console >= 1.0.0-beta4",
       "Microsoft.VisualStudio.Web.BrowserLink.Loader >= 14.0.0-beta4",
-      "CommonMark.NET >= 0.9.0"
+      "CommonMark.NET >= 0.9.0",
+      "HairBand.Core >= 1.0.0-*"
     ],
     "DNX,Version=v4.5.1": [],
     "DNXCore,Version=v5.0": []
