Work done on theme engine

--- a/src/HairBand/config.json
+++ b/src/HairBand/config.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
-    "SiteTitle": "Hair Band"
+    "SiteTitle": "Hair Band",
+    "Theme": "Default"
   },
   "Data": {
     "DefaultConnection": {
