--- a/src/HairBand.Core/project.json
+++ b/src/HairBand.Core/project.json
@@ -8,7 +8,8 @@
 
     "dependencies": {
         "CommonMark.NET": "0.9.0",
-        "Microsoft.AspNet.Hosting.Interfaces": "1.0.0-beta4"
+        "Microsoft.AspNet.Hosting.Interfaces": "1.0.0-beta4",
+        "DotLiquid": "1.8.0"
     },
 
     "frameworks": {
