Working on default user sore

--- a/src/HairBand/project.json
+++ b/src/HairBand/project.json
@@ -27,7 +27,8 @@
         "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
         "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta4",
         "CommonMark.NET": "0.9.0",
-        "HairBand.Core": "1.0.0-*"
+        "HairBand.Core": "1.0.0-*",
+"HairBand.Web": "1.0.0-*"
     },
 
     "commands": {
