--- a/src/HairBand.Core/project.json
+++ b/src/HairBand.Core/project.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "CommonMark.NET": "0.9.0",
         "Microsoft.AspNet.Hosting.Interfaces": "1.0.0-beta4",
-        "DotLiquid": "1.8.0"
+        "DotLiquid": "1.8.0",
+        "Newtonsoft.Json": "6.0.8"
     },
 
     "frameworks": {
