--- a/src/HairBand.Web/project.json
+++ b/src/HairBand.Web/project.json
@@ -8,7 +8,8 @@
 
   "dependencies": {
     "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-    "Microsoft.AspNet.Identity": "3.0.0-beta4"
+    "Microsoft.AspNet.Identity": "3.0.0-beta4",
+    "Newtonsoft.Json": "6.0.8"
   },
 
   "frameworks": {
