--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/*/*/*/App_Data-TEST
-/*/*/*/lib-TEST
+/*/*/*/App_Data/
+/*/*/*/lib/
+/*/*/*/_*.js
 
 
 ## Ignore Visual Studio temporary files, build results, and
