added second theme

--- a/src/HairBand/config.json
+++ b/src/HairBand/config.json
@@ -1,11 +1,6 @@
 {
   "AppSettings": {
     "SiteTitle": "Hair Band",
-    "Theme": "Default"
-  },
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HairBand;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+    "Theme": "Happy"
   }
 }
