--- a/src/HairBand/project.json
+++ b/src/HairBand/project.json
@@ -24,7 +24,8 @@
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta4",
     "CommonMark.NET": "0.9.0",
     "HairBand.Core": "1.0.0-*",
-    "HairBand.Web": "1.0.0-*"
+    "HairBand.Web": "1.0.0-*",
+    "DotLiquid": "1.8.0"
   },
 
   "commands": {
@@ -36,12 +37,11 @@
   "frameworks": {
     "dnx451": {
       "dependencies": {
-        "DotLiquid": "1.0.0-*"
+        //"DotLiquid": "1.0.0-*"
       }
     },
     "dnxcore50": {
       "dependencies": {
-        "DotLiquid": ""
       }
     }
   },
