--- a/src/HairBand/project.lock.json
+++ b/src/HairBand/project.lock.json
@@ -23,14 +23,11 @@
       "Microsoft.VisualStudio.Web.BrowserLink.Loader >= 14.0.0-beta4",
       "CommonMark.NET >= 0.9.0",
       "HairBand.Core >= 1.0.0-*",
-      "HairBand.Web >= 1.0.0-*"
+      "HairBand.Web >= 1.0.0-*",
+      "DotLiquid >= 1.8.0"
     ],
-    "DNX,Version=v4.5.1": [
-      "DotLiquid >= 1.0.0-*"
-    ],
-    "DNXCore,Version=v5.0": [
-      "DotLiquid "
-    ]
+    "DNX,Version=v4.5.1": [],
+    "DNXCore,Version=v5.0": []
   },
   "libraries": {
     "CommonMark.NET/0.9.0": {
