--- a/src/HairBand/project.json
+++ b/src/HairBand/project.json
@@ -1,65 +1,66 @@
 {
-  "webroot": "wwwroot",
-  "userSecretsId": "aspnet5-HairBand-b7aa4cb3-065c-4944-88fc-299cdf47f65c",
-  "version": "1.0.0-*",
+    "webroot": "wwwroot",
+    "userSecretsId": "aspnet5-HairBand-b7aa4cb3-065c-4944-88fc-299cdf47f65c",
+    "version": "1.0.0-*",
 
-  "dependencies": {
-    "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-    "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-beta4",
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta4",
-    "Microsoft.AspNet.Authentication.Facebook": "1.0.0-beta4",
-    "Microsoft.AspNet.Authentication.Google": "1.0.0-beta4",
-    "Microsoft.AspNet.Authentication.MicrosoftAccount": "1.0.0-beta4",
-    "Microsoft.AspNet.Authentication.Twitter": "1.0.0-beta4",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
-    "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
-    "Microsoft.AspNet.Tooling.Razor": "1.0.0-beta4",
-    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
-    "Microsoft.Framework.ConfigurationModel.UserSecrets": "1.0.0-beta4",
-    "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta4",
-    "Microsoft.Framework.Logging": "1.0.0-beta4",
-    "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta4",
-    "CommonMark.NET": "0.9.0",
-    "HairBand.Core": "1.0.0-*",
-    "HairBand.Web": "1.0.0-*",
-    "DotLiquid": "1.8.0"
-  },
-
-  "commands": {
-    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
-    "gen": "Microsoft.Framework.CodeGeneration",
-    "ef": "EntityFramework.Commands"
-  },
-
-  "frameworks": {
-    "dnx451": {
-      "dependencies": {
-        //"DotLiquid": "1.0.0-*"
-      }
+    "dependencies": {
+        "Microsoft.AspNet.Mvc": "6.0.0-beta4",
+        "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-beta4",
+        "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta4",
+        "Microsoft.AspNet.Authentication.Facebook": "1.0.0-beta4",
+        "Microsoft.AspNet.Authentication.Google": "1.0.0-beta4",
+        "Microsoft.AspNet.Authentication.MicrosoftAccount": "1.0.0-beta4",
+        "Microsoft.AspNet.Authentication.Twitter": "1.0.0-beta4",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
+        "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
+        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+        "Microsoft.AspNet.Tooling.Razor": "1.0.0-beta4",
+        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
+        "Microsoft.Framework.ConfigurationModel.UserSecrets": "1.0.0-beta4",
+        "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta4",
+        "Microsoft.Framework.Logging": "1.0.0-beta4",
+        "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
+        "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta4",
+        "CommonMark.NET": "0.9.0",
+        "HairBand.Core": "1.0.0-*",
+        "HairBand.Web": "1.0.0-*",
+        "DotLiquid": "1.8.0",
+        "YamlDotNet": "3.6.0"
     },
-    "dnxcore50": {
-      "dependencies": {
-      }
-    }
-  },
 
-  "exclude": [
-    "wwwroot",
-    "node_modules",
-    "bower_components"
-  ],
-  "publishExclude": [
-    "node_modules",
-    "bower_components",
-    "**.xproj",
-    "**.user",
-    "**.vspscc"
-  ],
-  "scripts": {
-    "postrestore": [ "npm install", "bower install" ],
-    "prepare": [ "gulp copy" ]
-  }
+    "commands": {
+        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
+        "gen": "Microsoft.Framework.CodeGeneration",
+        "ef": "EntityFramework.Commands"
+    },
+
+    "frameworks": {
+        "dnx451": {
+            "dependencies": {
+                //"DotLiquid": "1.0.0-*"
+            }
+        },
+        "dnxcore50": {
+            "dependencies": {
+            }
+        }
+    },
+
+    "exclude": [
+        "wwwroot",
+        "node_modules",
+        "bower_components"
+    ],
+    "publishExclude": [
+        "node_modules",
+        "bower_components",
+        "**.xproj",
+        "**.user",
+        "**.vspscc"
+    ],
+    "scripts": {
+        "postrestore": [ "npm install", "bower install" ],
+        "prepare": [ "gulp copy" ]
+    }
 }
