more project clean up and work on configuration api

--- a/src/HairBand/config.json
+++ b/src/HairBand/config.json
@@ -1,7 +1,8 @@
 {
   "AppSettings": {
     "Title": "Hair Band",
-    "Theme": "Happy",
-    "Example": "Example test"
+    "InstallationCompleted": "false",
+    "AdminEnabled": "false",
+    "Test": "default"
   }
 }
