Working on settings / installer

--- a/src/HairBand/wwwroot/app_data/settings.json
+++ b/src/HairBand/wwwroot/app_data/settings.json
@@ -1,7 +1,9 @@
 {
+
   "AppSettings": {
-    "InstallationComplete": false,
-    "AdminEnabled": true,
-    "Test": "edce8727-6dd9-4b49-ac64-3058e65f61cb"
+    "Title": "Hair Band",
+    "InstallationCompleted": "false",
+    "AdminEnabled": "false",
+    "Test": "overriden"
   }
 }
