--- a/src/HairBand/wwwroot/App_Data/_config.yml
+++ b/src/HairBand/wwwroot/App_Data/_config.yml
@@ -1,5 +1,14 @@
----
 name: Hair Band
-time: 05/15/2015
+time: 2015-06-17T17:27:48.8112336-05:00
+pages: []
+posts: []
+related_posts: []
+static_files: []
+data: []
+documents: []
+categories: {}
+tags: {}
+root_path: C:\Users\itlackey\Source\Repos\HairBand\src\HairBand\wwwroot
+install_completed: true
 more_info: info for the site
 theme: Happy
