--- a/src/HairBand/wwwroot/App_Data/_config.yml
+++ b/src/HairBand/wwwroot/App_Data/_config.yml
@@ -1,5 +1,5 @@
 name: Hair Band
-time: 2015-06-17T17:27:48.8112336-05:00
+time: 2015-06-18T07:15:44.0448852-05:00
 pages: []
 posts: []
 related_posts: []
@@ -10,5 +10,6 @@ categories: {}
 tags: {}
 root_path: C:\Users\itlackey\Source\Repos\HairBand\src\HairBand\wwwroot
 install_completed: true
+admin_enabled: true
 more_info: info for the site
 theme: Happy
