cleaning up build task, default theme, home page and data structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-/*/*/*/App_Data/secure
-**/wwwroot/app_data/*
-/*/*/*/lib
-/*/*/*/themes
+
+**/wwwroot/app_data/_config.yml
+**/wwwroot/app_data
+**/lib
+**/wwwroot/themes/*
 _*.js
 *.nuspec
 
