--- a/src/HairBand/App_Data/_config.yml
+++ b/src/HairBand/App_Data/_config.yml
@@ -3,3 +3,10 @@ name: Hair Band
 time: 05/15/2015
 more_info: info for the site
 theme: readable
+install_completed: true
+admin_enabled: true
+groups:
+- order: 1
+  name: Examples
+- order: 2
+  name: About
