--- a/src/HairBand.Web.Admin/project.json
+++ b/src/HairBand.Web.Admin/project.json
@@ -1,9 +1,16 @@
-{
-  "webroot": "wwwroot",
-  "userSecretsId": "aspnet5-HairBand-b7aa4cb3-065c-4944-88fc-299cdf47f65c",
+﻿{
   "version": "1.0.0-*",
+  "description": "",
+  "authors": [ "" ],
+  "tags": [ "" ],
+  "projectUrl": "",
+  "licenseUrl": "",
 
   "dependencies": {
+    "System.Collections": "4.0.10-beta-22816",
+    "System.Linq": "4.0.0-beta-22816",
+    "System.Threading": "4.0.10-beta-22816",
+    "Microsoft.CSharp": "4.0.0-beta-22816",
     "Microsoft.AspNet.Mvc": "6.0.0-beta4",
     "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-beta4",
     "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta4",
@@ -21,46 +28,11 @@
     "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta4",
     "Microsoft.Framework.Logging": "1.0.0-beta4",
     "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta4",
-    "CommonMark.NET": "0.9.0",
-    "HairBand.Core": "1.0.0-*",
-    "HairBand.Web": "1.0.0-*",
-    "DotLiquid": "1.8.0",
-    "YamlDotNet": "3.6.0",
-    "HairBand.Web.Admin": "1.0.0-*"
-  },
-
-  "commands": {
-    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
-    "gen": "Microsoft.Framework.CodeGeneration",
-    "ef": "EntityFramework.Commands"
+    "HairBand.Core": ""
   },
 
   "frameworks": {
-    "dnx451": {
-      "dependencies": {
-      }
-    },
-    "dnxcore50": {
-      "dependencies": {
-      }
-    }
-  },
-
-  "exclude": [
-    "wwwroot",
-    "node_modules",
-    "bower_components"
-  ],
-  "publishExclude": [
-    "node_modules",
-    "bower_components",
-    "**.xproj",
-    "**.user",
-    "**.vspscc"
-  ],
-  "scripts": {
-    "postrestore": [ "npm install", "bower install" ],
-    "prepare": [ "gulp copy" ]
+    "dnx451": { },
+    "dnxcore50": { }
   }
 }
