--- a/src/HairBand.Core/project.json
+++ b/src/HairBand.Core/project.json
@@ -1,29 +1,35 @@
 {
-    "version": "1.0.0-*",
-    "description": "",
-    "authors": [ "" ],
-    "tags": [ "" ],
-    "projectUrl": "",
-    "licenseUrl": "",
+  "version": "1.0.0-*",
+  "description": "",
+  "authors": [ "" ],
+  "tags": [ "" ],
+  "projectUrl": "",
+  "licenseUrl": "",
 
-    "dependencies": {
-        "CommonMark.NET": "0.9.0",
-        "Microsoft.AspNet.Hosting.Interfaces": "1.0.0-beta4",
-        "Newtonsoft.Json": "6.0.8",
-        "Microsoft.AspNet.Identity": "3.0.0-beta4",
-        "YamlDotNet": "3.6.0",
-        "DotLiquid": "1.8.0"
-    },
+  "dependencies": {
+    "CommonMark.NET": "0.9.0",
+    "Microsoft.AspNet.Hosting.Interfaces": "1.0.0-beta4",
+    "Newtonsoft.Json": "6.0.8",
+    "Microsoft.AspNet.Identity": "3.0.0-beta4",
+    "YamlDotNet": "3.6.0",
+    "DotLiquid": "1.8.0",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta4",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
+    "Microsoft.Framework.Logging": "1.0.0-beta4",
+    "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta4"
+  },
 
-    "frameworks": {
-        "dnx451": { },
-        "dnxcore50": {
-            "dependencies": {
-                "System.Collections": "4.0.10-beta-22816",
-                "System.Linq": "4.0.0-beta-22816",
-                "System.Threading": "4.0.10-beta-22816",
-                "Microsoft.CSharp": "4.0.0-beta-22816"
-            }
-        }
+  "frameworks": {
+    "dnx451": { },
+    "dnxcore50": {
+      "dependencies": {
+        "System.Collections": "4.0.10-beta-22816",
+        "System.Linq": "4.0.0-beta-22816",
+        "System.Threading": "4.0.10-beta-22816",
+        "Microsoft.CSharp": "4.0.0-beta-22816"
+      }
     }
+  }
 }
